task5/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-access
spec:
  podSelector:
    matchLabels:
      app: your-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: db-access
      ports:
        - protocol: TCP
          port: 27017  # MongoDB
        - protocol: TCP
          port: 5432  # PostgreSQL
